--- a/personality segmentation/Customer_Personality_Analysis.ipynb
+++ b/personality segmentation/Customer_Personality_Analysis.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "# - What is the business question?\n",
-    "a business trying to find out customers groups, which have the same characteristics, personality, ideas, age, and interests to find out patterns in customers and test on them some marketing camping, offers, and understand what they need and where to find them, by all tha tthe business will maximize the profit and develop it "
+    "A business aims to identify customer groups that share similar characteristics—such as personality traits, ideas, age, and interests—to uncover patterns in their behavior. By doing so, the business can test targeted marketing campaigns, offers, and better understand customer needs and where to reach them. Through this approach, the business can maximize profits and drive growth"
    ]
   },
   {
